[package]
name = "rs-builder-signing-sdk"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Ted"]
description = "Rust implementation of Polymarket Builder API authentication with HMAC-SHA256 signatures"
repository = "https://github.com/tdergouzi/rs-builder-signing-sdk"
keywords = ["polymarket", "hmac", "authentication", "api", "builder"]
categories = ["cryptography", "api-bindings"]

[dependencies]
# HMAC & Crypto
hmac = "0.12"
sha2 = "0.10"
base64 = "0.21"

# HTTP client (for remote signing)
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "1.0"

[dev-dependencies]
tokio-test = "0.4"
mockito = "1.2"
